Fixed alignment on userr profile page

--- a/Azimuth/Content/UserProfile.css
+++ b/Azimuth/Content/UserProfile.css
@@ -3,6 +3,10 @@
     height: 100%;
 }
 
+#user-photo {
+    text-align: center;
+}
+
 #user-photo img {
     margin: auto;
     max-height: 300px;
